Moved error out of form, fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,7 @@ li {
     padding-top: 16px;
     padding-bottom: 16px;
 }
+
+.alert {
+    margin-top: 16px;
+}
